# rust-auth-api

./: .env.test  Cargo.toml  README.md  sea.toml
api/: Cargo.toml
api/src/: main.rs
api/src/auth/: handler.rs  jwt.rs  mod.rs  service.rs
api/src/db/: user.rs
api/src/routes/: mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250326_065547_create_users_table.rs  main.rs
