[package]
name = "rust-auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
config = "0.13"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "1"

argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }

sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid"] }

chrono = { version = "0.4", features = ["serde"] }


utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }

# Already here, keep it:
utoipa-swagger-ui = { version = "6", features = ["axum"] }
